--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="container">
-      <h1>Сума цифр</h1>
+      <h1>Сумує всі числа</h1>
       <form id="calcForm">
         <label for="numberInput">Введіть число:</label>
         <input type="number" id="numberInput" name="numberInput" required />
-        <button type="submit">СУМА</button>
+        <button type="submit">Результат</button>
       </form>
       <div id="result"></div>
     </div>
